# src/swagger.json
@@ -186,6 +186,65 @@
                     }
                 }
             }
+        },
+        "/creditcard": {
+            "get": {
+                "summary": "Carts",
+                "description": "Lista todos os cartões",
+                "tags": [
+                    "Credit Card"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "error"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Carts",
+                "description": "Adiciona um cartão de crédito a um usuario no pagar.me",
+                "tags": [
+                    "Credit Card"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "ref": "#/components/schemas/CreditCard",
+                                "example": {
+                                    "line_1": "375, Av. General Osorio, Centro",
+                                    "line_2": "7º Andar",
+                                    "zip_code": "220000111",
+                                    "city": "Rio de Janeiro",
+                                    "state": "RJ",
+                                    "country": "BR",
+                                    "verify_card": true,
+                                    "number": "4000000000000010",
+                                    "holder_name": "Tony Stark",
+                                    "holder_document": "93095135270",
+                                    "exp_month": 1,
+                                    "exp_year": 30,
+                                    "cvv": "351",
+                                    "brand": "Mastercard",
+                                    "label": "renner",
+                                    "customer_id": "cus_dBVZOB7TGHD2YLmv"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "error"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -269,6 +328,64 @@
                                 }
                             }
                         }
+                    }
+                }
+            },
+            "CreditCard": {
+                "type": "object",
+                "properties": {
+                    "address": {
+                        "type": "object",
+                        "properties": {
+                            "line_1": {
+                                "type": "stirng"
+                            },
+                            "line_2": {
+                                "type": "string"
+                            },
+                            "zip_code": {
+                                "type": "string"
+                            },
+                            "city": {
+                                "type": "string"
+                            },
+                            "state": {
+                                "type": "string"
+                            },
+                            "country": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "verify_card": {
+                        "type": "string"
+                    },
+                    "number": {
+                        "type": "string"
+                    },
+                    "holder_name": {
+                        "type": "string"
+                    },
+                    "holder_document": {
+                        "type": "number"
+                    },
+                    "exp_month": {
+                        "type": "string"
+                    },
+                    "exp_year": {
+                        "type": "string"
+                    },
+                    "cvv": {
+                        "type": "string"
+                    },
+                    "brand": {
+                        "type": "stirng"
+                    },
+                    "label": {
+                        "type": "stirng"
+                    },
+                    "customer_id": {
+                        "type": "stirng"
                     }
                 }
             }
